[package]
name = "mysteryshack"
version = "0.1.0"

authors = ["Markus Unterwaditzer <markus@unterwaditzer.net>"]
license = "MIT"
keywords = ["remotestorage"]
readme = "README.md"

[lib]
name = "mysteryshack"
path = "src/mysteryshack/lib.rs"

[[bin]]
name = "mysteryshack"
test = false
doc = false

[dependencies]
rustc-serialize = "0.3"
iron = "0.4"
router = "0.4"
hyper = "0.9"
toml = "0.2"
unicase = "1"
atomicwrites = "0.0"
url = { features = ["rustc-serialize"], version = "1" }
clap = "2"
rand = "0.3"
persistent = "0.2"
urlencoded = "0.4"
handlebars-iron = "0.18"
handlebars = "0.20"
regex = "0.1"
iron-login = "0.5"
quick-error = "1"
mount = "0.2"
time = "0.1"
filetime = "0.1"
chrono = "0.2"
nix = "0.7"
clippy = {git = "https://github.com/Manishearth/rust-clippy", version = "*", optional = true}
webicon = "0.3"
rust_sodium = "0.1"
iron-error-router = "0.2"
please-clap = "0.1"
termion = "1"

[dev-dependencies]
tempdir = "*"

[features]
default = []
