[package]
name = "mysteryshack"
version = "0.1.0"

authors = ["Markus Unterwaditzer <markus@unterwaditzer.net>"]
license = "MIT"
keywords = ["remotestorage"]
readme = "README.md"

[lib]
name = "mysteryshack"
path = "src/mysteryshack/lib.rs"

[[bin]]
name = "mysteryshack"
test = false
doc = false

[dependencies]
rustc-serialize = "0.3"
iron = "0.5"
router = "0.5"
hyper = "0.10"
toml = "0.2"
unicase = "1"
atomicwrites = "0.1"
url = { features = ["rustc-serialize"], version = "1" }
clap = "2"
rand = "0.3"
persistent = "0.3"
urlencoded = "0.5"
handlebars-iron = "0.23"
handlebars = "0.25"
regex = "0.2"
quick-error = "1"
mount = "0.3"
time = "0.1"
filetime = "0.1"
chrono = "0.2"
nix = "0.7"
clippy = {git = "https://github.com/Manishearth/rust-clippy", version = "*", optional = true}
webicon = "0.3"
rust_sodium = "0.1"
iron-error-router = "0.3"
please-clap = "0.1"
termion = "1"
iron-sessionstorage = "0.6"

[dev-dependencies]
tempdir = "*"

[features]
default = []
